# omnimergekit

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .requirements_eval_filtered.txt  CALIBER_LEARNINGS.md  LICENSE  README.md  environment.yml  omnimergekit.py  requirements-dev.txt  requirements-eval.txt  requirements-quant.txt  requirements.txt
competence/: analyze_source_deltas.py  build_hybrid_fisher_lrp.py  competence_combine.py  competence_extract.py  lrp_compute_calibration.py  lxt_qwen3_5.py  precompute_fisher.py  probe_lxt_qwen35.py  rename_lrp_keys_for_multimodal.py
docs/: CONDA_ENVS.md  EVAL.md  HEAD_PRUNING_31B.md  LINODE_SETUP.md  MTP_BENCH.md  (+17 more)
tools/agentic-loop-harness/: .gitignore  README.md  install.sh  pyproject.toml  requirements.txt
tools/agentic-loop-harness/agentic_loop_harness/: __init__.py  cli.py  detect.py  drive.py  probe.py  replay.py  server.py  softloop.py
tools/agentic-loop-harness/fixtures/: agentic_filewrite_v1.json  agentic_plan_todo_v1.json  csharp_loop_parity.json  csharp_loop_parity_nothink.json  kvstore_deep.json  solar_build_friction.json  solar_build_start.json  solar_system_v4.json  threejs_build.json
tools/agentic-loop-harness/matrices/: gemma4_card.json  gemma4_card_antiloop.json  minp_2temp.json
tools/agentic-loop-harness/profiles/: gemma4.example.yaml
tools/agentic-loop-harness/prompts/: agentic_tasks_v1.json  coldstart_coding_v1.json
tools/agentic-loop-harness/scripts/: build_llama_cpp.sh  diff_divergence.py  tabulate_cells.py
tools/agentic-loop-harness/templates/: README.md  google_pr35.jinja  google_pr35_ptfalse.jinja  v7_reinject_disabled.jinja
tools/agentic-loop-live/: .gitignore  README.md  config.example.yaml  install.sh  pyproject.toml  requirements.txt
tools/agentic-loop-live/agentic_loop_live/: __init__.py  analyze.py  backends.py  cli.py  compact.py  config.py  fixtures.py  proxy.py  session.py
tools/agentic-loop-live/fixtures/: snake-adversarial.json
(+1043 files in other folders)
